<resources>
    <string name="app_name">My Journey</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_profile">Profile</string>
    <string name="action_signout">Sign Out</string>
    <string name="rechercher">Search</string>
    <string name="add_post">Add</string>
    <string name="menu_prayers">Prayers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_todo">Todo List</string>
    <string name="menu_daily">Daily</string>
    <string name="menu_updateprofile">Update Profile</string>
    <string name="username">username</string>
    <string name="mail">mail</string>
    <string name="phonenumber">phonenumber</string>
    <string name="modify_profile">Modify Profile</string>
    <string name="validate_update">Validate Update</string>
    <string name="welcome">WELCOME TO YOUR HOME</string>

    <string name="facebook_app_id">579590626509471</string>
    <string name="fb_login_protocol_scheme">fb579590626509471</string>
    <string name="facebook_application_id">579590626509471</string>
</resources>