<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myjourney.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_todo"
        android:name="com.example.myjourney.ui.todo.Fragment_Todo"
        android:label="@string/menu_todo"
        tools:layout="@layout/fragment_todo" />

    <fragment
        android:id="@+id/nav_daily"
        android:name="com.example.myjourney.ui.daily.Fragment_Daily"
        android:label="@string/menu_daily"
        tools:layout="@layout/fragment_daily" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.myjourney.ui.profile.Fragment_View_Profile"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_nav_profile_to_nav_updateprofile"
            app:destination="@id/nav_updateprofile" />
    </fragment>

    <fragment
        android:id="@+id/nav_updateprofile"
        android:name="com.example.myjourney.ui.profile.Fragment_Update_Profile"
        android:label="@string/menu_updateprofile"
        tools:layout="@layout/fragment_update_profile" >
        <action
            android:id="@+id/action_nav_updateprofile_to_nav_profile"
            app:destination="@id/nav_profile" />
    </fragment>

    <!--<fragment
        android:id="@+id/nav_"
        android:name="com.example.myjourney.ui."
        android:label="@string/menu_"
        tools:layout="@layout/fragment_" />-->
</navigation>