<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.Fragment_Update_Profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_update_ImageView"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:src="@drawable/workspace" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/username_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:textSize="15sp"
                app:endIconMode="clear_text"
                android:autofillHints=""
                android:inputType="textCapSentences" />

            <EditText
                android:id="@+id/phonenumber_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phonenumber"
                android:textSize="15sp"
                android:autofillHints=""
                android:inputType="phone" />

            <EditText
                android:id="@+id/mail_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mail"
                android:textSize="15sp"
                android:autofillHints=""
                android:inputType="textEmailAddress" />

            <Button
                android:id="@+id/btn_validateUpdateProfile"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:text="@string/validate_update" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>

