<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/colorPrimary">

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="50dp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profileImageView_info"
                    android:layout_width="100dp"
                    android:layout_height="110dp"
                    android:layout_marginStart="10dp"
                    android:paddingTop="10dp"
                    android:src="@drawable/workspace"/>
                <!--infos utilisateur-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/username_TextView"
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="15sp"/>
                    <TextView
                        android:id="@+id/mail_TextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mail"
                        android:textStyle="italic"
                        android:textColor="@color/black"
                        android:textSize="12sp"/>
                    <TextView
                        android:id="@+id/phonenumber_TextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phonenumber"
                        android:textStyle="italic"
                        android:textColor="@color/black"
                        android:textSize="12sp"/>


                    <Button
                        android:id="@+id/updateProfile_Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:backgroundTint="@color/colorAccent"
                        android:text="@string/modify_profile"
                        android:textSize="12sp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#F5F0F0" />

                </LinearLayout> <!--infos utilisateur-->
            </LinearLayout>


        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#F5F0F0" />
    </LinearLayout>

</ScrollView>